Fix style megaphone

--- a/play/src/front/style/wa-theme/action-menu-bar.scss
+++ b/play/src/front/style/wa-theme/action-menu-bar.scss
@@ -69,7 +69,7 @@
             }
 
             .border-top-warning {
-                border-top: 4px solid theme("colors.orange");
+                border-top: 4px solid rgb(233, 199, 76);
                 @apply tw-pt-0;
             }
 
